removed real phone number & email address and removed unused branch in css code

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <article id="contact-me" class="contact">
             <u1> 
                 <li>
-                    <a href="tel:+15672423713">+1-567-242-3713</a>
+                    <a href="#">Insert Number</a>
                 </li>
                 <li>
-                    <a href="mailto:casukhela.4@osu.edu">casukhela.4@osu.edu</a>
+                    <a href="#">My Email</a>
                 </li>
             </u1>
         </article>
